RESOLVED FIXED 207922
PlatformMediaSessionClient::processingUserGestureForMedia is not needed
https://bugs.webkit.org/show_bug.cgi?id=207922
Summary PlatformMediaSessionClient::processingUserGestureForMedia is not needed
youenn fablet
Reported 2020-02-18 16:24:25 PST
PlatformMediaSessionClient::processingUserGestureForMedia is not needed
Attachments
Patch (7.38 KB, patch)
2020-02-18 16:36 PST, youenn fablet
no flags
youenn fablet
Comment 1 2020-02-18 16:36:12 PST
WebKit Commit Bot
Comment 2 2020-02-18 19:38:52 PST
Comment on attachment 391118 [details] Patch Clearing flags on attachment: 391118 Committed r256901: <https://trac.webkit.org/changeset/256901>
WebKit Commit Bot
Comment 3 2020-02-18 19:38:54 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 4 2020-02-18 19:39:48 PST
Note You need to log in before you can comment on or make changes to this bug.