PlatformMediaSessionClient::processingUserGestureForMedia is not needed https://bugs.webkit.org/show_bug.cgi?id=207922

Reviewed by Eric Carlson.

All code relies on the document and the virtual method is never used so remove it.
No change of behavior.

* Modules/mediastream/MediaStreamTrack.cpp:
(WebCore::MediaStreamTrack::processingUserGestureForMedia const): Deleted.
* Modules/mediastream/MediaStreamTrack.h:
* Modules/webaudio/AudioContext.cpp:
(WebCore::AudioContext::processingUserGestureForMedia const): Deleted.
* Modules/webaudio/AudioContext.h:
* html/HTMLMediaElement.h:
* platform/audio/PlatformMediaSession.h:


Canonical link: https://commits.webkit.org/220900@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@256901 268f45cc-cd09-0410-ab3c-d52691b4dbfc