Source/WebCore/Modules/webaudio/AudioContext.cpp
@@ -382,11 +382,6 @@ String AudioContext::sourceApplicationIdentifier() const
     return emptyString();
 }
 
-bool AudioContext::processingUserGestureForMedia() const
-{
-    return document() ? document()->processingUserGestureForMedia() : false;
-}
-
 bool AudioContext::isSuspended() const
 {
     return !document() || document()->activeDOMObjectsAreSuspended() || document()->activeDOMObjectsAreStopped();
@@ -1098,11 +1093,12 @@ void AudioContext::nodeWillBeginPlayback()
 
 bool AudioContext::willBeginPlayback()
 {
-    if (!document())
+    auto* document = this->document();
+    if (!document)
         return false;
 
     if (userGestureRequiredForAudioStart()) {
-        if (!processingUserGestureForMedia() && !document()->isCapturing()) {
+        if (!document->processingUserGestureForMedia() && !document->isCapturing()) {
             ALWAYS_LOG(LOGIDENTIFIER, "returning false, not processing user gesture or capturing");
             return false;
         }
@@ -1110,9 +1106,9 @@ bool AudioContext::willBeginPlayback()
     }
 
     if (pageConsentRequiredForAudioStart()) {
-        Page* page = document()->page();
+        auto* page = document->page();
         if (page && !page->canStartMedia()) {
-            document()->addMediaCanStartListener(*this);
+            document->addMediaCanStartListener(*this);
             ALWAYS_LOG(LOGIDENTIFIER, "returning false, page doesn't allow media to start");
             return false;
         }
@@ -1127,19 +1123,20 @@ bool AudioContext::willBeginPlayback()
 
 bool AudioContext::willPausePlayback()
 {
-    if (!document())
+    auto* document = this->document();
+    if (!document)
         return false;
 
     if (userGestureRequiredForAudioStart()) {
-        if (!processingUserGestureForMedia())
+        if (!document->processingUserGestureForMedia())
             return false;
         removeBehaviorRestriction(AudioContext::RequireUserGestureForAudioStartRestriction);
     }
 
     if (pageConsentRequiredForAudioStart()) {
-        Page* page = document()->page();
+        auto* page = document->page();
         if (page && !page->canStartMedia()) {
-            document()->addMediaCanStartListener(*this);
+            document->addMediaCanStartListener(*this);
             return false;
         }
         removeBehaviorRestriction(AudioContext::RequirePageConsentForAudioStartRestriction);
